# sandbox

./: README.md
bash/: check_if_user_exists.sh  compare_version_string.sh  cr_chomp.sh  creating_literal_with_newline.sh  get_dir_of_executing_script.sh  is_var_defined.sh  iterate_over_json_object.sh  printf_bluebox.sh
bash/expect_alternative/: expect_alternative.sh  program_that_takes_several_lines_of_input.py
bash/ls-globbing-with-and-without-extglob/: doit.sh
bash/trap/: trap_exit_signal.sh  trap_exit_signal_then_encounter_error_in_trap_fn.sh
bash/while/: delete_dnanexus_projects.sh
cmake/openssl-mingw/: CMakeLists.txt
cmake/tutorial/: doit.sh  tutorial.cxx
cram/: curl-noargs.t  exitstatus.t
curl/: verify_curl_resp_code.sh
jenkins-api/: api_user_get_console.sh  jenkins.js  jenkins.sh  trigger_jenkins_job.sh
make/export-envvars/: Makefile  test.sh
make/scratch-makefile/: Makefile
osx/: detect_osx109.sh
osx-jxa/: itunes-backTrack.js
python/argparse/: required_value.py
python/pytest/: test_string_comparision.py
python/pytest/parametrize/: test_dump_browser_tuples.py
python/resolving_dirs/: print_dir_of_file.py
python/selenium/: webdriverwait.py
python/selenium/zalenium/: grid.py
python/unittest/: Pipfile  README.md  test_log_test_result_at_teardown.py  test_pass_with_pytest_decorators.py
python/unittest/shared_setup_teardown/: base_test_case.py  my_mixin.py  test_foo.py  test_no_mixin_test_case.py  test_real_test_case.py
rvm/: jenkins_recreate_rvm_gemset.sh
selenium/java/: README.md
selenium/java/src/: Selenium2Example.java
selenium/python/vscode/: README.md
selenium/python/vscode-devcontainer/: README.md  docker-compose.yml
selenium/python/vscode-devcontainer/.devcontainer/: devcontainer.json  docker-compose.yml
selenium/python/vscode-devcontainer/tests/: test_sample.py
selenium/python/vscode-devctr-selenium-server/: docker-compose.yml
selenium/python/vscode-devctr-selenium-server/tests/: test_sample.py
selenium/python/vscode/tests/: test_sample.py
